--- a/hint.css
+++ b/hint.css
@@ -1,6 +1,6 @@
-/*! Hint.css - v1.3.1 - 2013-11-23
+/*! Hint.css - v1.3.1 - 2014-02-26
 * http://kushagragour.in/lab/hint/
-* Copyright (c) 2013 Kushagra Gour; Licensed MIT */
+* Copyright (c) 2014 Kushagra Gour; Licensed MIT */
 
 /*-------------------------------------*\
 	HINT.css - A CSS tooltip library
@@ -59,7 +59,7 @@
     content: attr(data-hint);
     background: #383838;
     color: white;
-    text-shadow: 0 -1px 0px black;
+    text-shadow: 0 -1px 0px #383838;
     padding: 8px 10px;
     font-size: 12px;
     line-height: 12px;
@@ -103,9 +103,9 @@
   bottom: 100%;
   left: 50%; }
 .hint--top:hover:after, .hint--top:hover:before, .hint--top:focus:after, .hint--top:focus:before {
-  -webkit-transform: translateY(-8px);
-  -moz-transform: translateY(-8px);
-  transform: translateY(-8px); }
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  transform: translateY(0px); }
 
 /**
  * bottom tooltip
@@ -118,9 +118,9 @@
   top: 100%;
   left: 50%; }
 .hint--bottom:hover:after, .hint--bottom:hover:before, .hint--bottom:focus:after, .hint--bottom:focus:before {
-  -webkit-transform: translateY(8px);
-  -moz-transform: translateY(8px);
-  transform: translateY(8px); }
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  transform: translateY(0px); }
 
 /**
  * right tooltip
@@ -134,9 +134,9 @@
   left: 100%;
   bottom: 50%; }
 .hint--right:hover:after, .hint--right:hover:before, .hint--right:focus:after, .hint--right:focus:before {
-  -webkit-transform: translateX(8px);
-  -moz-transform: translateX(8px);
-  transform: translateX(8px); }
+  -webkit-transform: translateX(0px);
+  -moz-transform: translateX(0px);
+  transform: translateX(0px); }
 
 /**
  * left tooltip
@@ -150,9 +150,9 @@
   right: 100%;
   bottom: 50%; }
 .hint--left:hover:after, .hint--left:hover:before, .hint--left:focus:after, .hint--left:focus:before {
-  -webkit-transform: translateX(-8px);
-  -moz-transform: translateX(-8px);
-  transform: translateX(-8px); }
+  -webkit-transform: translateX(0px);
+  -moz-transform: translateX(0px);
+  transform: translateX(0px); }
 
 /**
  * source: hint-color-types.scss
@@ -171,7 +171,7 @@
  */
 .hint--error:after {
   background-color: #b34e4d;
-  text-shadow: 0 -1px 0px #592726; }
+  text-shadow: 0 -1px 0px #b34e4d; }
 .hint--error.hint--top:before {
   border-top-color: #b34e4d; }
 .hint--error.hint--bottom:before {
@@ -186,7 +186,7 @@
  */
 .hint--warning:after {
   background-color: #c09854;
-  text-shadow: 0 -1px 0px #6c5328; }
+  text-shadow: 0 -1px 0px #c09854; }
 .hint--warning.hint--top:before {
   border-top-color: #c09854; }
 .hint--warning.hint--bottom:before {
@@ -201,7 +201,7 @@
  */
 .hint--info:after {
   background-color: #3986ac;
-  text-shadow: 0 -1px 0px #193b4d; }
+  text-shadow: 0 -1px 0px #3986ac; }
 .hint--info.hint--top:before {
   border-top-color: #3986ac; }
 .hint--info.hint--bottom:before {
@@ -216,7 +216,7 @@
  */
 .hint--success:after {
   background-color: #458746;
-  text-shadow: 0 -1px 0px #1a321a; }
+  text-shadow: 0 -1px 0px #458746; }
 .hint--success.hint--top:before {
   border-top-color: #458746; }
 .hint--success.hint--bottom:before {
@@ -239,21 +239,21 @@
   opacity: 1;
   visibility: visible; }
 .hint--always.hint--top:after, .hint--always.hint--top:before {
-  -webkit-transform: translateY(-8px);
-  -moz-transform: translateY(-8px);
-  transform: translateY(-8px); }
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  transform: translateY(0px); }
 .hint--always.hint--bottom:after, .hint--always.hint--bottom:before {
-  -webkit-transform: translateY(8px);
-  -moz-transform: translateY(8px);
-  transform: translateY(8px); }
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  transform: translateY(0px); }
 .hint--always.hint--left:after, .hint--always.hint--left:before {
-  -webkit-transform: translateX(-8px);
-  -moz-transform: translateX(-8px);
-  transform: translateX(-8px); }
+  -webkit-transform: translateX(0px);
+  -moz-transform: translateX(0px);
+  transform: translateX(0px); }
 .hint--always.hint--right:after, .hint--always.hint--right:before {
-  -webkit-transform: translateX(8px);
-  -moz-transform: translateX(8px);
-  transform: translateX(8px); }
+  -webkit-transform: translateX(0px);
+  -moz-transform: translateX(0px);
+  transform: translateX(0px); }
 
 /**
  * source: hint-rounded.scss
