--- a/src/hint-core.scss
+++ b/src/hint-core.scss
@@ -32,9 +32,9 @@
 		// shouldn't receive pointer events, otherwise even hovering tooltip will make it appear
 		pointer-events: none;
 
-		-webkit-transition: 0.3s ease;
-		-moz-transition: 0.3s ease;
-		transition: 0.3s ease;
+		// -webkit-transition: 0.3s ease;
+		// -moz-transition: 0.3s ease;
+		// transition: 0.3s ease;
 	}
 
 	&:hover:before, &:hover:after,
@@ -62,11 +62,11 @@
 		content: attr(data-hint);
 		background: $defaultColor;
 		color: white;
-		text-shadow: 0 -1px 0px darken($defaultColor, $textShadowDarkenAmount);
+		// text-shadow: 0 -1px 0px darken($defaultColor, $textShadowDarkenAmount);
 		padding: $verticalPadding $horizontalPadding;
 		font-size: $fontSize;
 		line-height: $fontSize;
 		white-space: nowrap;
-		box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+		// box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
 	}
 }
