--- a/hint.css
+++ b/hint.css
@@ -42,7 +42,10 @@
     visibility: hidden;
     opacity: 0;
     z-index: 1000000;
-    pointer-events: none; }
+    pointer-events: none;
+    -webkit-transition: opacity 0.2s ease;
+    -moz-transition: opacity 0.2s ease;
+    transition: opacity 0.2s ease; }
   .hint:hover:before, .hint:hover:after, .hint:focus:before, .hint:focus:after, [data-hint]:hover:before, [data-hint]:hover:after, [data-hint]:focus:before, [data-hint]:focus:after {
     visibility: visible;
     opacity: 1; }
